--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <header id="site_header" class="header mobile-menu-hide">
         <div class="header-content">
           <div class="site-title-block mobile-hidden">
-            <a href="index.html#home"><div class="site-title">Geek <span>University</span></div></a>
+            <a href="index.html#home"><div class="site-title">Lucas <span>Caramês</span></div></a>
           </div>
 
           <!-- Navigation -->
@@ -94,7 +94,7 @@
 
                     <div class="col-sm-8 col-md-8 col-lg-8">
                       <div class="title-block">
-                        <h1>Geek University</h1>
+                        <h1>Lucas Caramês</h1>
                         <div class="owl-carousel text-rotation">                                    
                           <div class="item">
                             <div class="sp-subtitle">Doutorando em Física</div>
